# kindle-sync

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Makefile  PUSH_INSTRUCTIONS.md  README.md  config.yaml.example  docker-compose.yml  main.py  main_enhanced.py  monitor_final.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  test-results-e2e.xml
.github/workflows/: debug-ssh.yml  deploy-to-pi.yml  manage-service.yml  test-deployment.yml  test-key-format.yml  test-ssh-connection.yml  test.yml
Backups/: workflow_test_20251010_121020.md
docs/: COMPREHENSIVE_TUTORIAL.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_OPTIONS.md  DESIGN_IMPROVEMENTS.md  DOCKER.md  GITHUB_ACTIONS_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_PLAN.md  MANUAL_DEPLOYMENT.md  OPERATIONAL_RUNBOOKS.md  PRE_COMMIT_SETUP.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  TESTING.md  TESTING_PLAN.md  TEST_FAILURE_ANALYSIS.md  TEST_REFACTORING_GUIDE.md  TEST_REFACTORING_PLAN.md  TEST_RESULTS.md
monitoring/: alerting-rules.yml  grafana-dashboard.json
scripts/: check_status.sh  deploy-progress.sh  deploy-to-pi.sh  deploy-with-config.sh  deploy-with-logging.sh  deploy.sh  docker-commands.sh  docker-setup.sh  fix_dns_and_push.sh  monitor-dashboard.sh  monitor-deployment.sh  monitor_final.sh  monitor_workflow.sh  pi-setup.sh  run-tests.sh  setup-env.sh  setup-precommit.sh  simple_status.sh  web-monitor.py
src/: __init__.py  async_main.py  config.py  email_receiver.py  file_watcher.py  kindle_sync.py  pdf_converter.py  sync_processor.py
src/business_metrics/: __init__.py  content_analytics.py  metrics_collector.py  performance_analytics.py  user_analytics.py
src/caching/: __init__.py  cache_manager.py  decorators.py  memory_cache.py  redis_cache.py
src/core/: __init__.py  async_file_watcher.py  async_processor.py  error_handler.py  exceptions.py  retry.py
src/database/: __init__.py  manager.py  models.py
src/monitoring/: __init__.py  health_checks.py  metrics.py  prometheus_exporter.py
src/rate_limiting/: __init__.py  decorators.py  rate_limiter.py
src/security/: __init__.py  secrets_manager.py  validation.py
src/tracing/: __init__.py  decorators.py  tracer.py
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/e2e/: test_complete_workflow.py
tests/fixtures/: __init__.py  mock_objects.py  sample_data.py
tests/integration/: test_async_integration.py  test_config_integration.py  test_file_processing_integration.py
tests/unit/: test_async_processor.py  test_config.py  test_core_exceptions.py  test_core_retry.py  test_database_manager.py  test_database_models.py  test_email_receiver.py  test_file_watcher.py  test_health_checks.py  test_kindle_sync.py  test_pdf_converter.py  test_security_secrets_manager.py  test_security_validation.py  test_sync_processor.py
tests/utils/: test_helpers.py  test_runner.py
